--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ font-size: 17px;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-image: url(/img/asics_bg.png);
+    background-image: url(img/asics_bg.png);
 }
 .asics_text {
   padding-bottom: 150px;
